Root entries in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
-cache/*
-cache/**/*
-test/*
-test/**/*
-Smarty/templates_c/*
-storage/*
-storage/**/*
-logs/*
-backup/*
-user_privileges/*
-config-dev.inc.php
+/cache
+/test
+/Smarty/templates_c
+/storage
+/logs
+/backup
+/user_privileges
+/config-dev.inc.php
