insert events fix

--- a/modules/Calendar4You/cron/InsertEvents.service
+++ b/modules/Calendar4You/cron/InsertEvents.service
@@ -121,7 +121,7 @@ if ($num_rows1 > 0) {
     $sql3 = "insert into its4you_googlesync4you_events (crmid,geventid,userid,eventtype,lastmodified) 
         values (?,?,?,?,?) ";
     $adb->pquery($sql3,array($focus->id, $event->getId(),$userid,$type,$event->getUpdated()));
-    $adb->pquery("update its4you_googlesync4you_access set synctoken='$synctoken2' where userid=$userid");
+    $adb->pquery("update its4you_googlesync4you_access set synctoken='$synctoken2' where userid=$userid",array());
               }
             
   $pageToken = $events->getNextPageToken();
