feat(Workflow) scheduled workflow: plugin to cron system

--- a/cron/modules/com_vtiger_workflow/com_vtiger_workflow.service
+++ b/cron/modules/com_vtiger_workflow/com_vtiger_workflow.service
@@ -65,5 +65,9 @@ function vtRunTaskJob($adb){
 		$task->doTask($entity);
 	}
 }
+$adb = PearDatabase::getInstance();
+require_once 'modules/com_vtiger_workflow/WorkFlowScheduler.php';
+$workflowScheduler = new WorkFlowScheduler($adb);
+$workflowScheduler->queueScheduledWorkflowTasks();
 vtRunTaskJob($adb);
 ?>
