--- a/cron/modules/com_vtiger_workflow/com_vtiger_workflow.service
+++ b/cron/modules/com_vtiger_workflow/com_vtiger_workflow.service
@@ -14,7 +14,6 @@ require_once 'include/utils/utils.php';
 require_once('include/utils/CommonUtils.php');
 require_once("config.inc.php");
 require_once("include/HTTP_Session/Session.php");
-require_once('include/database/PearDatabase.php');
 require_once 'include/Webservices/Utils.php';
 require_once("modules/Users/Users.php");
 require_once("include/Webservices/State.php");
@@ -40,7 +39,6 @@ require_once 'modules/Users/Users.php';
 require_once('modules/com_vtiger_workflow/VTSimpleTemplate.inc');
 require_once 'modules/com_vtiger_workflow/VTEntityCache.inc';
 require_once('modules/com_vtiger_workflow/VTWorkflowUtils.php');
-
 require_once 'modules/com_vtiger_workflow/include.inc';
 
 function vtRunTaskJob($adb){
@@ -62,7 +60,12 @@ function vtRunTaskJob($adb){
 			continue;
 		}
 		$entity = new VTWorkflowEntity($adminUser, $entityId);
-		$task->doTask($entity);
+		$entityCache = new VTEntityCache($adminUser);
+		$wsModuleName = $util->toWSModuleName($entity);
+		$wsId = vtws_getWebserviceEntityId($wsModuleName, $entity->getId());
+		if (empty($task->test) or $task->evaluate($entityCache, $entity->getId())) {
+			$task->doTask($entity);
+		}
 	}
 }
 $adb = PearDatabase::getInstance();
