--- a/modules/Calendar4You/cron/InsertEvents.service
+++ b/modules/Calendar4You/cron/InsertEvents.service
@@ -58,7 +58,8 @@ if ($num_rows1 > 0) {
         $_SESSION['authenticated_user_language'] = $current_language;
         
         $GoogleSync4You = new GoogleSync4You();
-        $GoogleSync4You->setAccessDataForUser($userid);
+		$have_access_data = $GoogleSync4You->setAccessDataForUser($userid);
+		if ($have_access_data) {
         $GoogleSync4You->connectToGoogle();
         if ($GoogleSync4You->isLogged()) {
         $events = $GoogleSync4You->getGoogleCalEvents($CALENDAR_ID,$synctoken);
@@ -132,6 +133,7 @@ $events = $GoogleSync4You->getGoogleCalEvents($CALENDAR_ID,$synctoken,$pageToken
     break;
   }            
             }
+        }
         }
     }
 }
