fix (cron Workflows) requiere Update Webservices for Sheduler Workflows

--- a/cron/modules/com_vtiger_workflow/com_vtiger_workflow.service
+++ b/cron/modules/com_vtiger_workflow/com_vtiger_workflow.service
@@ -34,6 +34,7 @@ require_once('include/logging.php');
 require_once 'include/Webservices/WebserviceEntityOperation.php';
 require_once "include/language/$default_language.lang.php";
 require_once 'include/Webservices/Retrieve.php';
+require_once 'include/Webservices/Update.php';
 require_once('modules/Emails/mail.php');
 require_once 'modules/Users/Users.php';
 require_once('modules/com_vtiger_workflow/VTSimpleTemplate.inc');
