--- a/modules/SMSNotifier/ext/providers/MyProvider.php.sample
+++ b/modules/SMSNotifier/ext/providers/MyProvider.php.sample
@@ -74,7 +74,7 @@ class MyProvider implements ISMSProvider {
 		$httpClient = new Vtiger_Net_Client($serviceURL);
 		$response = $httpClient->doPost($params);
 
-		$responseLines = split("\n", $response);
+		$responseLines = explode("\n", $response);
 
 		$results = array();
 		foreach($responseLines as $responseLine) {
