fix(Calendar) google event sync: use DATE when DATETIME is empty

--- a/modules/Calendar4You/cron/InsertEvents.service
+++ b/modules/Calendar4You/cron/InsertEvents.service
@@ -21,7 +21,7 @@ $controldate = date('Y-m-d',$controltime);
 $c_time_zone = new DateTimeZone($default_timezone);
 
 $sql1 = 'SELECT a.userid ,synctoken,cal.calendar,cal.event
-	FROM  its4you_googlesync4you_access a
+	FROM its4you_googlesync4you_access a
 	INNER JOIN vtiger_users ON id = a.userid
 	INNER JOIN its4you_googlesync4you_calendar cal on cal.userid=a.userid
 	WHERE googleinsert=1 and deleted=0
@@ -67,14 +67,16 @@ if ($num_rows1 > 0) {
 						$focus->column_fields['location'] = $event->getLocation();
 						$focus->column_fields['assigned_user_id'] = $userid;
 						$recurrence = $event->getRecurrence();
-						if ($recurrence == '') {
+						if (empty($recurrence)) {
 							//$When = $event->getWhen();
-							$start_time_lenght = strlen($event->getStart()->dateTime);
-							if ($start_time_lenght == 10)
+							$evdtst = (empty($event->getStart()->dateTime) ? $event->getStart()->date : $event->getStart()->dateTime);
+							$evdted = (empty($event->getEnd()->dateTime) ? $event->getEnd()->date : $event->getEnd()->dateTime);
+							$start_time_length = strlen($evdtst);
+							if ($start_time_length == 10)
 								$is_full_day_event = true;
 							else
 								$is_full_day_event = false;
-							$startdatetime = new DateTime($event->getStart()->dateTime);
+							$startdatetime = new DateTime($evdtst);
 							$startdatetime->setTimeZone($c_time_zone);
 							$new_time_start_time = $startdatetime->format('U');
 							$user_date_start = DateTimeField::convertToUserFormat($startdatetime->format('Y-m-d'));
@@ -82,7 +84,7 @@ if ($num_rows1 > 0) {
 								$user_time_start = $startdatetime->format('H:i');
 							else
 								$user_time_start = '00:00';
-							$enddatetime = new DateTime($event->getEnd()->dateTime);
+							$enddatetime = new DateTime($evdted);
 							$enddatetime->setTimeZone($c_time_zone);
 							$new_time_end_time = $enddatetime->format('U');
 							$user_date_end = DateTimeField::convertToUserFormat($enddatetime->format('Y-m-d'));
@@ -100,7 +102,7 @@ if ($num_rows1 > 0) {
 							$focus->column_fields['time_end'] = $user_time_end;
 							$duration_time = $new_time_end_time - $new_time_start_time;
 							$duration_hour = floor($duration_time / 3600);
-							$duration_minutes = ($duration_time - ($duration_hour * 3600 ))  / 60;
+							$duration_minutes = ($duration_time - ($duration_hour * 3600 )) / 60;
 							$focus->column_fields['duration_hours'] = $duration_hour;
 							$focus->column_fields['duration_minutes'] = $duration_minutes;
 						}
